<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:hint="@string/tvResultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/edit1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/edit2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="138dp"
        android:layout_height="131dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit2">

        <Switch
            android:id="@+id/sw1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sw1"
            android:onClick="Operar" />

        <Switch
            android:id="@+id/sw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sw2"
            android:onClick="Operar" />

        <Switch
            android:id="@+id/sw3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sw3"
            android:onClick="Operar" />

        <Switch
            android:id="@+id/sw4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sw4"
            android:onClick="Operar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>